--- a/templates/base.html
+++ b/templates/base.html
@@ -14,15 +14,11 @@
     <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
-    {#        <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">#}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/main.css' %}">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
 
     {% block extra_css %}{% endblock extra_css %}
     <title>{% block title %}M E I {% endblock title %}</title>
@@ -32,49 +28,50 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid" style="padding: 0">
-                <a class="navbar-brand" href="{% url 'gmao:home' %}">GMAO</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-                {% comment %}<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <a class="navbar-brand" href="{% url 'gmao:home' %}">MEI</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>{% endcomment %}
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        {% if user.is_authenticated %}
+                    {% if user.is_authenticated %}
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             {% if user.role == 'ADMIN' %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
-                                        interventions</a>
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des interventions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:toutes_les_doleances' %}">Liste des
-                                        doléances</a>
+                                    <a class="nav-link" href="{% url 'gmao:toutes_les_doleances' %}">Liste des doléances</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des
-                                        équipes</a>
+                                    <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des équipes</a>
                                 </li>
                             {% elif user.role == 'TECH' %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
-                                        interventions</a>
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des interventions</a>
                                 </li>
                             {% endif %}
-                        {% endif %}
-                    </ul>
-                    {% if user.is_authenticated %}
+                        </ul>
                         <div class="d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
-                    <span class="text-light me-lg-3 mb-2 mb-lg-0">
-                        <i class="fa-solid fa-user-alt" style="color: hsl(137, 90%, 50%);"></i>
-                        {{ user.first_name }} {{ user.last_name }}
-                    </span>
+                            <span class="text-light me-lg-3 mb-2 mb-lg-0">
+                                <i class="fa-solid fa-user-alt" style="color: hsl(137, 90%, 50%);"></i>
+                                {{ user.first_name }} {{ user.last_name }}
+                            </span>
                             {% if user.role == 'ADMIN' %}
                                 <span id="current-time" class="text-light me-lg-3 mb-2 mb-lg-0"></span>
                             {% endif %}
-                            <a href="{% url 'accounts:logout-admin' %}" class="btn btn-outline-danger btn-sm">Logout</a>
+                            <a href="{% url 'accounts:logout-admin' %}" class="btn btn-outline-danger btn-sm">
+                                <i class="fas fa-sign-out"></i>
+                            </a>
+                        </div>
+                    {% else %}
+                        <div class="col-sm">
+                            <a class="navbar-brand flex-grow-1" style="color: aliceblue; text-align: center;">
+                                <span class="float-end">
+                                    <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>
+                                    &nbsp;&nbsp;Accès verrouillé
+                                 </span>   
+                            </a>
                         </div>
                     {% endif %}
                 </div>
@@ -83,29 +80,6 @@
     </header>
     <div class="container-fluid" style="padding-top: 70px">
         {% block content %}
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-4">
-                        <div class="login-container">
-                            <h2 class="text-center mb-4">Connexion</h2>
-                            <form method="post" class="login-form">
-                                {% csrf_token %}
-                                <div class="form-group mb-3">
-                                    <label for="username">Nom d'utilisateur</label>
-                                    <input type="text" class="form-control" id="username" name="username" required>
-                                </div>
-                                <div class="form-group mb-3">
-                                    <label for="password">Mot de passe</label>
-                                    <input type="password" class="form-control" id="password" name="password" required>
-                                </div>
-                                <div class="d-grid">
-                                    <button type="submit" class="btn btn-primary">Se connecter</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
         {% endblock content %}
     </div>
     <footer class="bg-dark text-center text-lg-start" id="footer">
@@ -121,8 +95,7 @@
 <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
-<script type="text/javascript"
-        src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
@@ -132,8 +105,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-<script type="text/javascript"
-        src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
 <script src="{% static 'js/nav.js' %}"></script>
 
 {% block page_specific_js %}
@@ -159,7 +131,6 @@
 {% endblock page_specific_js %}
 
 {% block extra_js %}
-
 {% endblock extra_js %}
 </body>
 </html>
