--- a/templates/temp.html
+++ b/templates/temp.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title><!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html></title>
+    <!-- ... (garder le contenu du head comme dans le nouveau base.html) ... -->
+    <title>
+        
+    </title>
 </head>
 <body>
-
-
+<div class="wrapper">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid" style="padding: 0">
+                <a class="navbar-brand" href="{% url 'gmao:home' %}">GMAO</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    {% if user.is_authenticated %}
+                        <!-- ... (garder le contenu du menu pour les utilisateurs authentifiés) ... -->
+                        {% if user.role == 'ADMIN' %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
+                                        interventions</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao:toutes_les_doleances' %}">Liste des
+                                        doléances</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des
+                                        équipes</a>
+                                </li>
+                            {% elif user.role == 'TECH' %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
+                                        interventions</a>
+                                </li>
+                            {% endif %}
+                    {% else %}
+                        <div class="col-sm">
+                            <a class="navbar-brand flex-grow-1" style="color: aliceblue; text-align: center;">
+                                <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>&nbsp;&nbsp;Accès verrouillé
+                            </a>
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="container-fluid" style="padding-top: 70px">
+        {% block content %}
+        {% endblock content %}
+    </div>
+    <footer class="bg-dark text-center text-lg-start" id="footer">
+        <!-- ... (garder le contenu du footer) ... -->
+    </footer>
+</div>
+<!-- ... (garder les scripts) ... -->
 </body>
 </html>
