--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,14 @@
     <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/main.css' %}">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
 
     {% block extra_css %}{% endblock extra_css %}
     <title>{% block title %}M E I {% endblock title %}</title>
@@ -26,6 +29,8 @@
 <body>
 <div class="wrapper">
     <header>
+        {% block nav-btn %}
+        {% endblock nav-btn %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid" style="padding: 0">
                 <a class="navbar-brand" href="{% url 'gmao:home' %}">MEI</a>
@@ -38,17 +43,21 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             {% if user.role == 'ADMIN' %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des interventions</a>
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
+                                        interventions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:toutes_les_doleances' %}">Liste des doléances</a>
+                                    <a class="nav-link" href="{% url 'gmao:toutes_les_doleances' %}">Liste des
+                                        doléances</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des équipes</a>
+                                    <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des
+                                        équipes</a>
                                 </li>
                             {% elif user.role == 'TECH' %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des interventions</a>
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
+                                        interventions</a>
                                 </li>
                             {% endif %}
                         </ul>
@@ -70,7 +79,7 @@
                                 <span class="float-end">
                                     <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>
                                     &nbsp;&nbsp;Accès verrouillé
-                                 </span>   
+                                 </span>
                             </a>
                         </div>
                     {% endif %}
@@ -95,7 +104,8 @@
 <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+<script type="text/javascript"
+        src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
@@ -105,7 +115,8 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+<script type="text/javascript"
+        src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
 <script src="{% static 'js/nav.js' %}"></script>
 
 {% block page_specific_js %}
