--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block nav-btn %}
-    <a href="{% url 'accounts:login-admin' %}" class="btn btn-outline-info border-light btn-sm" id="btn-nav">Login</a>
+    <a href="{% url 'accounts:login-admin' %}"
+       class="btn btn-outline-info border-light btn-sm float-end mx-2" id="btn-nav">
+        Login
+    </a>
 {% endblock nav-btn %}
 {% block content %}
     <style>
