--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -135,31 +135,25 @@
             </section>
         </div>
     {% else %}
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-info text-white">
-                        <h5 class="mb-0">Mon portefeuille de doléances</h5>
-                    </div>
-                    <div class="card-body" style="overflow-x: auto;">
-                        <div class="table-responsive">
-                            <table id="portfolioTable" class="table table-bordered" style="width:100%">
-                                <thead>
-                                <tr>
-                                    <th>NDI</th>
-                                    <th>Station</th>
-                                    <th>Élément</th>
-                                    <th>Panne</th>
-                                    <th>Statut</th>
-                                    <th>Actions</th>
-                                </tr>
-                                </thead>
-                            </table>
+        {% if user.role == 'TECH' %}
+            <div class="container-fluid mt-4">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header bg-info text-white">
+                                <h5 class="mb-0">Mon portefeuille de doléances</h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table id="portfolioTable" class="table table-striped table-bordered"
+                                           style="width:100%"></table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     {% endif %}
 
 
@@ -308,7 +302,10 @@
                     success: function (data) {
                         $('#id_appelant').html('<option value="">---------</option>');
                         $.each(data, function (index, item) {
-                            $('#id_appelant').append($('<option></option>').val(item.id).html(item.nom_appelant));
+                            $('#id_appelant')
+                                .append($('<option></option>')
+                                    .val(item.id)
+                                    .html(item.nom_appelant).upper).html(item.prenom_appelant.autocapitalize);
                         });
                     }
                 });
@@ -321,13 +318,13 @@
                     dataType: 'json',
                     success: function (data) {
                         console.log("Received elements:", data);  // Pour le débogage
-                        var select = $('#id_element');
+                        const select = $('#id_element');
                         select.empty().prop('disabled', false);
                         select.append('<option value="">Sélectionnez un élément</option>');
 
                         $.each(data, function (category, elements) {
                             if (elements.length > 0) {
-                                var optgroup = $('<optgroup label="' + category + '">');
+                                const optgroup = $('<optgroup label="' + category + '">');
                                 $.each(elements, function (index, element) {
                                     optgroup.append($('<option>').val(element[1]).text(element[1]));
                                 });
