--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -8,7 +8,7 @@
 {% endblock extra_css %}
 
 {% block content %}
-    <div class="login-container bet mt-5 mx-5">
+    <div class="login-container">
         <div class="login-box">
             <div class="logo">
                 <img src="{% static 'accounts/img/logo_mei.png' %}" alt="Mei Logo">
