--- a/accounts/static/accounts/css/login.css
+++ b/accounts/static/accounts/css/login.css
@@ -14,7 +14,7 @@ body {
     max-width: 400px;
     padding: 20px;
     box-sizing: border-box;
-    margin: auto;
+    margin: 100px auto auto;
 }
 
 .login-box {
