--- a/accounts/static/accounts/css/login.css
+++ b/accounts/static/accounts/css/login.css
@@ -12,16 +12,16 @@ body {
 .login-container {
     width: 100%;
     max-width: 400px;
-    padding: 20px;
+    padding: 50px 20px 20px;
     box-sizing: border-box;
-    margin: 100px auto auto;
+    margin-top: 150px;
 }
 
 .login-box {
     background-color: #ffffff;
     border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    width: 300px;
 }
 
 .logo {
@@ -74,6 +74,7 @@ button {
     transition: background-color 0.3s;
 }
 
+
 button:hover {
     background-color: #0a4b55;
 }
@@ -92,6 +93,27 @@ button:hover {
 .forgot-password:hover {
     text-decoration: underline;
 }
+
+@media (max-width: 768px) {
+    .login-container {
+        width: 100%;
+    }
+
+    .login-box {
+        padding: 15px;
+    }
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    input[type="text"],
+    input[type="password"],
+    button {
+        font-size: 0.8rem;
+    }
+}
+
 
 @media (max-width: 480px) {
     .login-container {
@@ -112,3 +134,4 @@ button:hover {
         font-size: 0.8rem;
     }
 }
+
