--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -3,30 +3,89 @@
 
 {% block title %}Liste des interventions{% endblock title %}
 
+{% block nav-btn %}
+    <a href="{% url 'logout' %}" class="btn btn-outline-danger text-center text-light border-light btn-sm mx-2"
+       id="btn-nav">Logout</a>
+    <a href="{% url 'gmao:home' %}" class="btn btn-outline-primary text-center text-light border-light btn-sm mx-2"
+       id="btn-nav">Retour à l'accueil</a>
+{% endblock nav-btn %}
+
 {% block extra_css %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
-{% endblock extra_css %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/themes/dark.min.css">
+    <style>
+        .filter-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            align-items: center;
+        }
+
+        .filter-container > * {
+            margin-bottom: 0;
+        }
+
+        .form-select, .form-control {
+            width: auto;
+        }
+
+        @media (max-width: 768px) {
+            .filter-container {
+                flex-direction: column;
+                align-items: stretch;
+            }
+
+            .filter-container > * {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+        }
+    </style>
+    <style>
+        /* ... Vos autres styles ... */
+
+        #interventionsTable td {
+            white-space: normal;
+            word-break: break-word;
+        }
+
+        #interventionsTable .techniciens-cell {
+            max-width: 150px; /* Ajustez selon vos besoins */
+        }
+    </style>
+{% endblock %}
+
+{% block navbar-content %}
+    <i style="color: hsl(137, 90%, 50%);" class="fa-solid fa-user-alt"></i>
+    &nbsp;&nbsp;&nbsp;{{ user.first_name }}&nbsp;{{ user.last_name }}
+{% endblock navbar-content %}
 
 {% block content %}
     <div class="container-fluid mt-3">
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-header bg-primary text-white">
-                        <h4 class="mb-0">Liste des interventions du {{ current_date|date:"d/m/Y" }}</h4>
+                    <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                        <h4 class="mb-0">Liste des interventions</h4>
+                        <div class="filter-container">
+                            <label for="startDate"></label><input type="text" id="startDate"
+                                                                  class="form-control form-control-sm flatpickr-input"
+                                                                  placeholder="Date début">
+                            <label for="endDate"></label><input type="text" id="endDate"
+                                                                class="form-control form-control-sm flatpickr-input"
+                                                                placeholder="Date fin">
+                            <button id="filterDate" class="btn btn-info btn-sm">Filtrer</button>
+                            <button id="resetDate" class="btn btn-secondary btn-sm">Réinitialiser</button>
+                        </div>
                     </div>
                     <div class="card-body">
-                        {% if user_role == 'ADMIN' %}
-                            <div class="filter-container mb-3">
-                                <input type="text" id="startDate" class="form-control form-control-sm flatpickr-input"
-                                       placeholder="Date début">
-                                <input type="text" id="endDate" class="form-control form-control-sm flatpickr-input"
-                                       placeholder="Date fin">
-                                <button id="filterDate" class="btn btn-info btn-sm">Filtrer</button>
-                                <button id="resetDate" class="btn btn-secondary btn-sm">Réinitialiser</button>
+                        <div id="loadingIndicator" style="display: none; text-align: center; padding: 20px;">
+                            <div class="spinner-border text-primary" role="status">
+                                <span class="sr-only">Chargement...</span>
                             </div>
-                        {% endif %}
+                            <p>Chargement des données en cours...</p>
+                        </div>
                         <table id="interventionsTable" class="table table-striped table-bordered">
                             <thead>
                             <tr>
@@ -54,57 +113,103 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.js"></script>
     <script>
         $(document).ready(function () {
-            {% if user_role == 'ADMIN' %}
-                flatpickr("#startDate", {
-                    dateFormat: "Y-m-d",
-                });
-                flatpickr("#endDate", {
-                    dateFormat: "Y-m-d",
-                });
-            {% endif %}
+            // Configuration de base pour Flatpickr
+            const flatpickrConfig = {
+                dateFormat: "Y-m-d",
+                maxDate: "today"
+            };
 
-            var table = $('#interventionsTable').DataTable({
-                ajax: {
-                    url: '{% url "gmao:get_interventions_data" %}',
-                    data: function (d) {
-                        {% if user_role == 'ADMIN' %}
-                            d.startDate = $('#startDate').val();
-                            d.endDate = $('#endDate').val();
-                        {% endif %}
-                    }
-                },
-                columns: [
-                    {data: 'ndi'},
-                    {data: 'station'},
-                    {data: 'panne'},
-                    {data: 'prise_en_charge'},
-                    {data: 'debut_travail'},
-                    {data: 'fin_travail'},
-                    {data: 'statut'},
-                    {data: 'techniciens'},
-                    {
-                        data: null,
-                        render: function (data, type, row) {
-                            return '<a href="/home/intervention/' + row.id + '/" class="btn btn-sm btn-primary">Éditer</a>';
-                        }
-                    }
-                ],
-                language: {
-                    url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/French.json'
+            // Initialisation de Flatpickr pour la date de début
+            const startDatePicker = flatpickr("#startDate", {
+                ...flatpickrConfig,
+                onChange: function (selectedDates, dateStr, instance) {
+                    endDatePicker.set('minDate', dateStr);
                 }
             });
 
-            {% if user_role == 'ADMIN' %}
-                $('#filterDate').on('click', function () {
-                    table.ajax.reload();
-                });
+            // Initialisation de Flatpickr pour la date de fin
+            const endDatePicker = flatpickr("#endDate", {
+                ...flatpickrConfig,
+                onChange: function (selectedDates, dateStr, instance) {
+                    startDatePicker.set('maxDate', dateStr);
+                }
+            });
 
-                $('#resetDate').on('click', function () {
-                    $('#startDate').val('');
-                    $('#endDate').val('');
-                    table.ajax.reload();
+            var table;
+
+            function initializeDataTable() {
+                if ($.fn.DataTable.isDataTable('#interventionsTable')) {
+                    table.destroy();
+                }
+
+                table = $('#interventionsTable').DataTable({
+                    ajax: {
+                        url: '{% url "gmao:get_interventions_data" %}',
+                        data: function (d) {
+                            d.startDate = $('#startDate').val();
+                            d.endDate = $('#endDate').val();
+                        }
+                    },
+                    columns: [
+                        {data: 'ndi'},
+                        {data: 'station'},
+                        {data: 'panne'},
+                        {data: 'prise_en_charge'},
+                        {data: 'debut_travail'},
+                        {data: 'fin_travail'},
+                        {data: 'statut'},
+                        {
+                            data: 'techniciens',
+                            render: function (data, type, row) {
+                                if (type === 'display') {
+                                    return data.split(', ').join('<br>');
+                                }
+                                return data;
+                            }
+                        },
+                        {
+                            data: null,
+                            render: function (data, type, row) {
+                                return '<a href="/home/intervention/' + row.id + '/" class="btn btn-sm btn-primary">Éditer</a>';
+                            }
+                        }
+                    ],
+                    language: {
+                        url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/French.json'
+                    },
+                    responsive: true,
+                    processing: true,
+                    serverSide: false,
+                    dom: 'Bfrtip',
+                    buttons: [
+                        {
+                            extend: 'excel',
+                            text: 'Exporter en Excel',
+                            exportOptions: {
+                                columns: ':visible'
+                            }
+                        },
+                    ]
                 });
-            {% endif %}
+            }
+
+            initializeDataTable();
+
+            $('#filterDate').on('click', function () {
+                if ($('#startDate').val() && $('#endDate').val()) {
+                    initializeDataTable();
+                } else {
+                    alert('Veuillez sélectionner une date de début et une date de fin.');
+                }
+            });
+
+            $('#resetDate').on('click', function () {
+                $('#startDate').val('');
+                $('#endDate').val('');
+                startDatePicker.setDate(null);
+                endDatePicker.setDate(null);
+                initializeDataTable();
+            });
         });
     </script>
 {% endblock extra_js %}
